--- a/daml.yaml
+++ b/daml.yaml
@@ -3,12 +3,11 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-project:
-  sdk-version: 0.12.3
-  scenario: DA.RefApps.StructuredTradeFinance.Main:setup
-  name: StructuredTradeFinance
-  source: daml/DA/RefApps/StructuredTradeFinance/Main.daml
-  parties:
+sdk-version: 0.13.10
+name: StructuredTradeFinance
+source: daml/DA/RefApps/StructuredTradeFinance/Main.daml
+scenario: DA.RefApps.StructuredTradeFinance.Main:setup
+parties:
   - Manufacturer
   - SubContractor1
   - SubContractor2
@@ -16,4 +15,8 @@ project:
   - SubContractor4
   - Bank
   - ExternalAuditor
-version: 2
+version: 2.0.0
+exposed-modules: []
+dependencies:
+  - daml-prim
+  - daml-stdlib
