--- a/Dockerfile-sandbox
+++ b/Dockerfile-sandbox
@@ -9,7 +9,7 @@ ARG sdk_version=0.13.13
 
 WORKDIR /home/sdk
 
-COPY dist/StructuredTradeFinance.dar /home/sdk/
+COPY .daml/dist/StructuredTradeFinance.dar /home/sdk/
 COPY scripts/install-daml.sh /home/sdk/
 
 RUN /bin/bash -c "apt-get update --no-show-upgraded &&  apt-get install wget openjdk-8-jdk -y"
