Fixing blackduck env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,6 +89,7 @@ workflows:
       - daml_test:
           <<: *only-release-tags
           daml_sdk_version: "0.13.13"
+          context: blackduck
       - github_release:
           context: github-refapp-repo-context
           requires:
