--- a/Dockerfile-sandbox
+++ b/Dockerfile-sandbox
@@ -11,11 +11,10 @@ WORKDIR /home/daml
 
 COPY .daml/dist/StructuredTradeFinance.dar /home/daml/
 
-# Need the root user to set appropriate ownership of the DAR file.
 USER root
 RUN chown daml StructuredTradeFinance.dar
 USER daml
 
 EXPOSE 6865
 
-CMD ~/.daml/bin/daml sandbox -- --port 6865 --scenario DA.RefApps.StructuredTradeFinance.Main:setup StructuredTradeFinance.dar
+CMD ~/.daml/bin/daml sandbox -- --address 0.0.0.0 --port 6865 --scenario DA.RefApps.StructuredTradeFinance.Main:setup StructuredTradeFinance.dar
