--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,11 +77,47 @@ jobs:
           command: |
             ./scripts/release.sh ex-structured-trade-finance
 
+  blackduck:
+    parameters:
+      daml_sdk_version:
+        type: string
+    executor: daml-executor
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
+            - m2
+      - install_sdk:
+          version: << parameters.daml_sdk_version >>
+      - save_cache:
+          paths:
+            - ~/.m2
+            - ~/.daml
+          key: m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
+      - run:
+          name: Run Blackduck Detect
+          command: |
+            bash <(curl -s https://raw.githubusercontent.com/DACH-NY/security-blackduck/master/synopsys-detect) ci-build digitalasset_ex-structured-trade-finance master --logging.level.com.synopsys.integration=DEBUG --detect.notices.report=true --detect.report.timeout=480
+      - run:
+          command: cp digitalasset_ex_structured_trade_finance_master_Black_Duck_Notices_Report.txt target/NOTICE
+      - persist_to_workspace:
+          root: target
+          paths:
+            - "*.jar"
+            - "*.dar"
+            - "lib"
+            - "NOTICE"
+
+
 workflows:
   version: 2
   build_and_test:
     jobs:
       - daml_test:
+          daml_sdk_version: "1.5.0"
+          context: blackduck
+      - blackduck:
           daml_sdk_version: "1.5.0"
           context: blackduck
   build_and_release:
