--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,123 +5,57 @@
 
 version: 2.1
 
-executors:
-  daml-executor:
-    docker:
-      - image: circleci/openjdk:11.0-jdk
-  docker_buildpack:
-    docker:
-      - image: circleci/buildpack-deps:xenial
-
-only-release-tags: &only-release-tags
-  filters:
-    tags:
-      only: /^v.*/
-    branches:
-      ignore: /.*/
+orbs:
+  slack: circleci/slack@3.4.2
 
 commands:
-  install_sdk:
-    description: "Install the DAML SDK"
-    parameters:
-      version:
-        type: string
+  slack_notification:
+    description: "Notify about failure on Slack"
     steps:
-      - run:
-          command: |
-            ./scripts/install-daml.sh << parameters.version >>
+      - slack/status:
+          fail_only: true
+          only_for_branches: master
+          webhook: '${SLACK_WEBHOOK}'
 
 jobs:
   daml_test:
     parameters:
       daml_sdk_version:
         type: string
-    executor: daml-executor
+    docker:
+      - image: digitalasset/daml-sdk:<< parameters.daml_sdk_version >>
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - daml-{{ checksum "daml.yaml" }}
-      - install_sdk:
-          version: << parameters.daml_sdk_version >>
       - run:
+          name: Build Daml
           command: |
-            export PATH=${HOME}/.daml/bin:${PATH}
-            daml build -o target/StructuredTradeFinance.dar
-            daml test --junit target/daml-test-reports/daml-test.xml --files daml/DA/RefApps/StructuredTradeFinance/Main.daml
-      - save_cache:
-          paths:
-            - ~/.daml
-          key: daml-{{ checksum "daml.yaml" }}
+            daml build
+      - run:
+          name: Daml tests
+          command: |
+            daml test --junit target/daml-test-reports/model.xml
       - store_test_results:
           path: target/daml-test-reports
       - store_artifacts:
           path: target/daml-test-reports
-      - persist_to_workspace:
-          root: target
-          paths:
-            - "*.dar"
-
-  github_release:
-    executor: docker_buildpack
-    steps:
-      - checkout
-      - attach_workspace:
-          at: /tmp/workspace
-      - run:
-          name: Push a new github release
-          command: |
-            ./scripts/release.sh ex-structured-trade-finance
-
-  blackduck:
-    parameters:
-      daml_sdk_version:
-        type: string
-    executor: daml-executor
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
-            - m2
-      - install_sdk:
-          version: << parameters.daml_sdk_version >>
-      - save_cache:
-          paths:
-            - ~/.m2
-            - ~/.daml
-          key: m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
-      - run:
-          name: Run Blackduck Detect
-          command: |
-            bash <(curl -s https://raw.githubusercontent.com/DACH-NY/security-blackduck/master/synopsys-detect) ci-build digitalasset_ex-structured-trade-finance master --logging.level.com.synopsys.integration=DEBUG --detect.notices.report=true --detect.report.timeout=480
-      - run:
-          command: cp digitalasset_ex_structured_trade_finance_master_Black_Duck_Notices_Report.txt target/NOTICE
-      - persist_to_workspace:
-          root: target
-          paths:
-            - "*.jar"
-            - "*.dar"
-            - "lib"
-            - "NOTICE"
-
+      - slack_notification
 
 workflows:
   version: 2
-  build_and_test:
+  test:
     jobs:
       - daml_test:
           daml_sdk_version: "1.9.0"
-      - blackduck:
-          daml_sdk_version: "1.9.0"
-          context: blackduck
-  build_and_release:
+          context: refapps
+  scheduled_test:
+    triggers:
+      - schedule:
+          cron: "0 1 * * *"
+          filters:
+            branches:
+              only:
+                - master
     jobs:
       - daml_test:
-          <<: *only-release-tags
           daml_sdk_version: "1.9.0"
-      - github_release:
-          context: github-refapp-repo-context
-          requires:
-            - daml_test
-          <<: *only-release-tags
+          context: refapps
