ci: scheduled on main

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
     jobs:
       - daml_test:
           daml_sdk_version: "1.10.0"
